Moving the schemas folder and removing a hard coded path